src-tauri/tests/snapshots/pipeline_scenarios__sys_workspace_rebuilt_renders_warning_notice.snap
---
source: tests/pipeline_scenarios.rs
expression: run_normalized(msgs)
---
- role: system
  id: msg-1
  content_length: 1
  content:
    - type: system-notice
      severity: warning
      label: Workspace rebuilt
      body: "Branch feat/x was never pushed; workspace was rebu...rom origin/main. Unpushed work is not recoverable.[len:105]"
  status: ~
  streaming: ~
