src-tauri/tests/snapshots/pipeline_scenarios__task_state_local_bash_dedupes_tool_line.snap
---
source: tests/pipeline_scenarios.rs
expression: result
---
- role: assistant
  id: msg-1
  content_length: 1
  content:
    - type: tool-call
      tool_name: Bash
      tool_call_id: toolu_bash_dedupe
      args_keys:
        - command
      args_text_length: 38
      has_result: false
      result_kind: ~
      result_preview: ~
      streaming_status: ~
      task_state:
        id: bash_task_dedupe
        tool_use_id: toolu_bash_dedupe
        task_type: local_bash
        subagent_type: ~
        status: completed
        is_backgrounded: false
        description: bun test src/foo.test.ts
        summary: bun test src/foo.test.ts
        total_tokens: ~
        duration_ms: ~
        last_tool_name: ~
        error: ~
        end_time_ms: ~
  status:
    type: complete
    reason: stop
  streaming: ~
