src-tauri/tests/snapshots/pipeline_scenarios__task_state_subagent_full_lifecycle.snap
---
source: tests/pipeline_scenarios.rs
expression: run_normalized(msgs)
---
- role: assistant
  id: msg-1
  content_length: 1
  content:
    - type: tool-call
      tool_name: Task
      tool_call_id: toolu_task_1
      args_keys:
        - description
      args_text_length: 41
      has_result: false
      result_kind: ~
      result_preview: ~
      streaming_status: ~
      task_state:
        id: task_1
        tool_use_id: toolu_task_1
        task_type: local_agent
        subagent_type: Explore
        status: completed
        is_backgrounded: true
        description: Review repository state
        summary: Repository review complete
        total_tokens: 180
        duration_ms: 4500
        last_tool_name: Read
        error: ~
        end_time_ms: ~
  status:
    type: complete
    reason: stop
  streaming: ~
