src-tauri/tests/snapshots/pipeline_scenarios__user_json_text_after_assistant_swallowed.snap
---
source: tests/pipeline_scenarios.rs
expression: run_normalized(msgs)
---
- role: assistant
  id: msg-1
  content_length: 1
  content:
    - type: text
      text: Using skill...
  status:
    type: complete
    reason: stop
  streaming: ~
