src-tauri/tests/snapshots/pipeline_scenarios__user_plain_text.snap
---
source: tests/pipeline_scenarios.rs
expression: run_normalized(msgs)
---
- role: user
  id: msg-1
  content_length: 1
  content:
    - type: text
      text: hello assistant
  status: ~
  streaming: ~
