src-tauri/tests/snapshots/pipeline_scenarios__user_prompt_files_array_present_but_empty.snap
---
source: tests/pipeline_scenarios.rs
expression: run_normalized(msgs)
---
- role: user
  id: u1
  content_length: 1
  content:
    - type: text
      text: no mentions here
  status: ~
  streaming: ~
