src-tauri/tests/snapshots/pipeline_scenarios__user_prompt_steer_flag_renders_as_user.snap
---
source: tests/pipeline_scenarios.rs
expression: run_normalized(msgs)
---
- role: user
  id: msg-1
  content_length: 1
  content:
    - type: text
      text: actually focus on failing tests
  status: ~
  streaming: ~
