src-tauri/tests/snapshots/pipeline_scenarios__user_prompt_steer_groups_in_same_turn.snap
---
source: tests/pipeline_scenarios.rs
expression: run_normalized(msgs)
---
- role: user
  id: msg-1
  content_length: 1
  content:
    - type: text
      text: start investigating
  status: ~
  streaming: ~
- role: assistant
  id: msg-2
  content_length: 1
  content:
    - type: text
      text: Looking into it...
  status:
    type: complete
    reason: stop
  streaming: ~
- role: user
  id: msg-3
  content_length: 1
  content:
    - type: text
      text: focus on failing tests first
  status: ~
  streaming: ~
- role: assistant
  id: msg-4
  content_length: 1
  content:
    - type: text
      text: "OK, switching focus."
  status:
    type: complete
    reason: stop
  streaming: ~
